# ADZVPN-Opus

./: .gitignore  Cargo.toml  README.md
ai-services/: requirements.txt  run.py  silver_constants.py
ai-services/assistant/: __init__.py  chat_engine.py  context_manager.py  knowledge_base.py  models.py  tools.py
ai-services/gateway/: __init__.py  app.py  config.py
ai-services/gateway/routes/: __init__.py  assistant.py  health.py  privacy.py  router.py  silver.py  threat.py
ai-services/privacy_ai/: __init__.py  models.py  noise_generator.py  privacy_optimizer.py  timing_obfuscator.py  traffic_obfuscator.py
ai-services/silver_router/: __init__.py  models.py  router.py
ai-services/tests/: __init__.py  test_assistant.py  test_privacy_ai.py  test_silver_constants.py  test_silver_router.py  test_threat_ai.py
ai-services/threat_ai/: __init__.py  anomaly_detector.py  domain_classifier.py  models.py  threat_engine.py  traffic_analyzer.py
crates/silver-client/: Cargo.toml
crates/silver-client/src/: config.rs  connection.rs  errors.rs  events.rs  lib.rs  tunnel.rs
crates/silver-core/: Cargo.toml
crates/silver-core/src/: constants.rs  lib.rs  pell.rs  silver_math.rs
crates/silver-crypto/: Cargo.toml
crates/silver-crypto/src/: encryption.rs  errors.rs  hashing.rs  key_exchange.rs  lib.rs  silver_kdf.rs
crates/silver-protocol/: Cargo.toml
crates/silver-protocol/src/: constants.rs  errors.rs  handshake.rs  lib.rs  packet.rs  session.rs
crates/silver-server/: Cargo.toml
crates/silver-server/src/: config.rs  errors.rs  lib.rs  listener.rs  main.rs  session_manager.rs  tunnel.rs
crates/silver-timing/: Cargo.toml
crates/silver-timing/src/: errors.rs  jitter.rs  lib.rs  scheduler.rs  shaper.rs
