[workspace]
members = [
    "crates/silver-core",
    "crates/silver-crypto",
    "crates/silver-protocol",
    "crates/silver-timing",
    "crates/silver-server",
    # "crates/silver-client",    # Coming soon
    # "crates/coinject-bridge",  # Coming soon
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Alexander David Zalewski (ADZ) <adz@adzvpn.dev>", "Claude Opus 4.5 <noreply@anthropic.com>"]
license = "MIT"
repository = "https://github.com/ADZ/ADZVPN-Opus"
description = "AI-Integrated VPN with Silver Ratio Cryptography from COINjecture"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
blake3 = "1.5"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"

# Networking
socket2 = { version = "0.5", features = ["all"] }
quinn = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion = "0.5"
