[package]
name = "silver-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Silver Ratio cryptographic primitives for ADZVPN-Opus"

[dependencies]
silver-core = { path = "../silver-core" }

# Cryptography
chacha20poly1305.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true

# Error handling
thiserror.workspace = true

# Encoding
hex = "0.4"

# Serialization
serde.workspace = true
bincode.workspace = true

[dev-dependencies]
serde_json = "1.0"
